Fixed other video not showing

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,10 @@
 /* This file is for your main application css. */
 @import "./phoenix.css";
 
+.hidden {
+    display: none;
+}
+
 /* Alerts and form errors */
 .alert {
   padding: 15px;
