--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,5 @@
 /* This file is for your main application css. */
-@import "./phoenix.css";
+@import "./bulma.css";
 
 .hidden {
     display: none;
