--- a/lib/acgp_web/templates/page/index.html.eex
+++ b/lib/acgp_web/templates/page/index.html.eex
@@ -19,7 +19,7 @@
       <p class="subtitle"><a href="https://www.askhole.io/" target="_blank">Askhole.io</a></p>
       <div class="content">
         <p>The First game on the the platform. Filled with inappropriate, deeply controversial, philosophical, and vulnerable inquiries, this deck of unusual questions will keep your night full of nervous laughter and your relationships somewhat distressing.</p>
-        <p><a href="/room/<%= Enum.random(22..10240) %>">Play now</p>
+        <p><a href="/askhole/<%= Enum.random(22..10240) %>">Play now</p>
       </div>
     </article>
   </div>
