--- a/lib/acgp_web/live/live_cards_against_humanity.html.leex
+++ b/lib/acgp_web/live/live_cards_against_humanity.html.leex
@@ -33,7 +33,7 @@
                     <div class="content">
                         <ol type="1">
                             <%= for user <- @users do %>
-                                <li><%= if @my_name == user.name do %>Me (<%= user.name %>)<% else %><%= user.name %><% end %> Score: <%= user.score %> <%= user.is_card_czar %></li>
+                                <li><%= if @my_name == user.name do %>Me (<%= user.name %>)<% else %><%= user.name %><% end %> Score: <%= user.score %> <%= if user.is_card_czar do %>I am the Card Czar<% end %></li>
                             <% end %>
                         </ol>
                     </div>
