First version of drawing

--- a/lib/acgp_web/live/live_draw_it.html.leex
+++ b/lib/acgp_web/live/live_draw_it.html.leex
@@ -30,4 +30,8 @@ function onMouseUp(event) {
 
 <canvas id="drawItCanvas" phx-hook="GetSVG"></canvas>
 
-<%= @img %>
+<object type="image/svg+xml" data="<%= @img %>" class="logo"></object>
+
+
+
+
