Much better drawing

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,14 +3,10 @@
 
 #drawItCanvas {
     border: 1px solid red;
-    width: 400px;
-    height: 400px;
 }
 
-#guessCanvas {
+.drawBox {
     border: 1px solid blue;
-        width: 400px;
-        height: 400px;
 }
 
 .hidden {
