--- a/lib/acgp_web/live/live_draw_it.html.leex
+++ b/lib/acgp_web/live/live_draw_it.html.leex
@@ -1,37 +1,66 @@
 <h1 class="title">Draw it</h1>
-<input type="text" name="user[phone_number]" id="user-phone-number" phx-hook="PhoneNumber" />
 
 <%= for user <- @users do %>
 <li><%= if @my_name == user.name do %>Me (<%= user.name %>)<% else %><%= user.name %><% end %> Score: <%= user.score %> <%= if user.is_card_czar do %>I am the Card Czar<% end %></li>
 <% end %>
 
+
+<%= if @is_draw_king do %>
 <script type="text/paperscript" canvas="drawItCanvas">
-	var path;
+var path;
+
+var callCount = 0;
+
+
 function onMouseDown(event) {
-	// Create a path:
-	path = new Path();
-	path.strokeColor = 'black';
-	// Add the mouse down position:
-	path.add(event.point);
+	// If we produced a path before, deselect it:
+	if (path) {
+		path.selected = false;
+	}
+
+	// Create a new path and set its stroke color to black:
+	path = new Path({
+		segments: [event.point],
+		strokeColor: 'black',
+		// Select the path, so we can see its segment points:
+		fullySelected: true
+	});
 }
 
+// While the user drags the mouse, points are added to the path
+// at the position of the mouse:
 function onMouseDrag(event) {
-	var radius = event.delta.length / 2;
-	var circle = new Path.Circle(event.middlePoint, radius);
-	circle.fillColor = 'black';
-	window.userSVG = paper.project.exportSVG({asString:true})
+	path.add(event.point);
+
+    if ((++callCount % 50) == 0) {
+	    window.userSVG = paper.project.exportSVG({asString:true})
+	}
 }
 
+// When the mouse is released, we simplify the path:
 function onMouseUp(event) {
-	// Add the mouse up position:
+	var segmentCount = path.segments.length;
+
+	// When the mouse is released, simplify it:
+	path.simplify(10);
+
+	// Select the path, so we can see its segments:
+	path.fullySelected = true;
+
+	var newSegmentCount = path.segments.length;
+	var difference = segmentCount - newSegmentCount;
+	var percentage = 100 - Math.round(newSegmentCount / segmentCount * 100);
 	window.userSVG = paper.project.exportSVG({asString:true})
-	path.add(event.point);
 }
 </script>
 
-<canvas id="drawItCanvas" phx-hook="GetSVG"></canvas>
 
-<object type="image/svg+xml" data="<%= @img %>" class="logo"></object>
+    <canvas id="drawItCanvas" phx-hook="GetSVG"></canvas>
+<% else %>
+    <object type="image/svg+xml" data="<%= @img %>" class="drawBox"></object>
+<% end %>
+
+
 
 
 
