Encode on client side

--- a/lib/acgp_web/live/live_draw_it.html.leex
+++ b/lib/acgp_web/live/live_draw_it.html.leex
@@ -36,7 +36,7 @@ function onMouseDown(event) {
 function onMouseDrag(event) {
 	path.add(event.point);
 
-    if ((++callCount % 25) == 0) {
+    if ((++callCount % 50) == 0) {
 	    window.userSVG = paper.project.exportSVG({asString:true})
 	}
 }
@@ -54,7 +54,7 @@ function onMouseUp(event) {
 	var newSegmentCount = path.segments.length;
 	var difference = segmentCount - newSegmentCount;
 	var percentage = 100 - Math.round(newSegmentCount / segmentCount * 100);
-	window.userSVG = paper.project.exportSVG({asString:true})
+	//window.userSVG = paper.project.exportSVG({asString:true})
 }
 </script>
 
