Added clear button and better cols

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,11 +2,11 @@
 @import "./bulma.css";
 
 #drawItCanvas {
-    border: 1px solid red;
+    border: 1px solid black;
 }
 
 .drawBox {
-    border: 1px solid blue;
+    border: 1px solid black;
 }
 
 .hidden {
